# crownwager

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  render.yaml
.github/: dependabot.yml  pull_request_template.md
backend/: conftest.py  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt
backend/accounts/: admin.py  apps.py  authentication.py  emails.py  models.py  serializers.py  signals.py  test_cookie_auth.py  tests.py  urls.py  views.py
backend/accounts/migrations/: 0001_initial.py
backend/assistant/: services.py  tests.py  urls.py  views.py
backend/common/: pagination.py  sports.py  tests.py  urls.py  views.py
backend/common/management/commands/: seed_demo.py
backend/config_project/: __init__.py  asgi.py  celery.py  urls.py  wsgi.py
backend/config_project/settings/: base.py  dev.py  env.py  prod.py
backend/content/: admin.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
backend/content/management/commands/: fetch_news.py
backend/content/migrations/: 0001_initial.py  0002_article_source_article_source_url.py
backend/odds/: admin.py  apps.py  fixtures_demo.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/odds/migrations/: 0001_initial.py
backend/odds/services/: arbitrage.py  odds_api.py
backend/predictions/: admin.py  fixtures_demo.py  models.py  serializers.py  tasks.py  test_ai_circuit.py  tests.py  urls.py  views.py
backend/predictions/management/commands/: refresh_predictions.py  settle_bestbets.py
backend/predictions/migrations/: 0001_initial.py  0002_savedbet.py  0003_trackedbet.py  0004_bestbet_result_bestbet_settled_at_and_more.py
backend/predictions/services/: ai_client.py  best_bets.py  grading.py  persistence.py  pipeline.py  record.py  staking.py
docs/: API.md  (+9 more)
(+96 files in other folders)
