[project]
name = "oddsaway-backend"
version = "0.1.0"
description = "OddsAway — sports-betting analytics & predictions API (Django + DRF)"
requires-python = ">=3.12"
dependencies = [
    "Django>=5.1,<5.2",
    "djangorestframework>=3.15",
    "djangorestframework-simplejwt>=5.3",
    "drf-spectacular>=0.27",
    "django-cors-headers>=4.4",
    "django-filter>=24.3",
    "pydantic-settings>=2.5",
    "dj-database-url>=2.2",
    "psycopg[binary]>=3.2",
    "redis>=5.0",
    "celery>=5.4",
    "django-celery-beat>=2.7",
    "requests>=2.32",
    "feedparser>=6.0",
    "Pillow>=10.4",
    "whitenoise>=6.7",
    "gunicorn>=23.0",
    "anthropic>=0.40",
    "openai>=1.50",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-django>=4.9",
    "pytest-cov>=5.0",
    "factory-boy>=3.3",
    "responses>=0.25",
    "ruff>=0.6",
    "black>=24.8",
    "mypy>=1.11",
    "django-stubs>=5.1",
    "bandit>=1.7",
    "pip-audit>=2.7",
]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = ["migrations", "_archived"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "DJ"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
plugins = ["mypy_django_plugin.main"]
ignore_missing_imports = true
exclude = ["migrations", "_archived"]

[tool.django-stubs]
django_settings_module = "config_project.settings.dev"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config_project.settings.dev"
python_files = ["test_*.py", "tests.py"]
addopts = "-q --reuse-db"
testpaths = ["accounts", "odds", "predictions", "content", "common", "assistant"]

[tool.coverage.run]
omit = ["*/migrations/*", "*/tests/*", "manage.py", "config_project/*"]
